--- a/packages/frontend/src/index.css
+++ b/packages/frontend/src/index.css
@@ -1,4 +1,4 @@
-@import url(https://cdn.jsdelivr.net/npm/firacode@6.2.0/distr/fira_code.css);
+/* @import url(https://cdn.jsdelivr.net/npm/firacode@6.2.0/distr/fira_code.css); */
 
 @tailwind base;
 @tailwind components;
